# document-automation-rag

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_answer_error.py  test_search_error.py
docs/: requirements.md
k8s/: 01-postgres.yaml  02-ollama.yaml  03-ollama-job.yaml  04-api.yaml  rag-app.yaml  secrets.yaml
src/: main.py
src/api/: dependencies.py  health_router.py  routes.py  schemas.py
src/core/: classifier.py  config.py  constants.py  db.py
src/core/llm/: base.py  factory.py  gemini_service.py  openai_service.py  prompts.py
src/core/processors/: base.py  vlm.py
src/core/rag/: engine.py
src/core/vector_db/: base.py  postgres.py  qdrant.py
src/models/: documents.py  invoice.py  sql_models.py  vector.py
src/services/: document_service.py  rag_service.py
tests/: conftest.py  test_health.py  test_vlm.py
tests/api/: test_endpoints.py
tests/evaluation/: eval_utils.py  evaluate_extraction.py  evaluate_retrieval.py
tests/integration/: test_pipeline.py  test_vector_db.py
tests/unit/: test_classifier.py  test_document_service.py  test_rag_engine.py  test_rag_service.py
