[project]
name = "project"
version = "0.1.0"
description = "Production-grade RAG API for intelligent invoice processing and semantic search using Gemini Vision and Qdrant."
authors = [
    { name = "Grzegorz Zioło" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "google-genai>=2.3.0",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.28",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.47.0",
]

[tool.pyrefly]
search-path = ["."]
disable-search-path-heuristics = true
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
targets = ["src"]
