[project]
name = "document-automation-rag"
version = "0.1.0"
description = "RAG API for intelligent document processing and retrieval using OpenAI compatible endpoints and PostgreSQL."
authors = [{ name = "Grzegorz Zioło" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pgvector>=0.4.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]

[tool.pyrefly]
search-path = ["."]
disable-search-path-heuristics = true
project-includes = ["**/*.py*", "**/*.ipynb"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "datasets>=4.8.5",
    "pillow>=12.2.0",
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
targets = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
